--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-top">
+            <div class="header-top-left">
+                <div class="burger-menu">
+                    <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
+                </div>
+            </div>
+            <div class="header__logo">
+                <a href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo">
+                    <span>CuBeats</span>
+                </a>
+            </div>
+            <div class="header-top-right">
+                <a href="#">SIGN UP</a>
+            </div>
+        </div>
+        <div class="header-bottom">
+            <form class="header-search">
+                <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
+                <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+        </div>
+    </header>
+    <main></main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer__menu">
+                <a class="footer__logo" href="/"><img class="logo__img" src="/img/logotransparente.png"
+                        alt="Logo">CuBeats</a>
+                <div class="footer-map">
+                    <nav>
+                        <h3>Titulo</h3>
+                        <ul class="nav__itemList">
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                        </ul>
+                    </nav>
+                    <nav>
+                        <h3>Titulo</h3>
+                        <ul class="nav__itemList">
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                        </ul>
+                    </nav>
+                    <nav>
+                        <h3>Titulo</h3>
+                        <ul class="nav__itemList">
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                            <li class="itemList__li"><a href="">item</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="footer_redes">
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-tiktok"></i>
+            </div>
+            <div class="footer__derechos">
+                <p>Los beats presentados aquí no son de nuestra autoría. No nos hacemos responsables de su contenido o
+                    derechos de uso.
+                </p>
+            </div>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
