header and footer done!

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -50,7 +50,7 @@
     padding-bottom: 20px;
 }
 
-
+/* MEDIAS QUERIES */
 @media(min-width:481px) {
     .footer_redes {
         width: 50%;
@@ -68,16 +68,20 @@
         align-items: center;
         width: 100%;
     }
-    .nav__itemList{
+
+    .nav__itemList {
         list-style: none;
     }
-    .itemList__li{
+
+    .itemList__li {
         text-decoration: none;
     }
-    .itemList__li a{
+
+    .itemList__li a {
         text-decoration: none;
         color: white;
     }
+
     .footer__menu {
         width: 90%;
         display: flex;
