--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -15,8 +15,8 @@
                 <a class="footer__logo" href="/"><img class="logo__img" src="/img/logotransparente.png"
                         alt="Logo">CuBeats</a>
                 <div class="footer-map">
-                    <nav>
-                        <h3>Titulo</h3>
+                    <nav class="footer-map-nav">
+                        <h3 class="footer-map-nav__title">Titulo</h3>
                         <ul class="nav__itemList">
                             <li class="itemList__li"><a href="">item</a></li>
                             <li class="itemList__li"><a href="">item</a></li>
@@ -26,7 +26,7 @@
                         </ul>
                     </nav>
                     <nav>
-                        <h3>Titulo</h3>
+                        <h3 class="footer-map-nav__title">Titulo</h3>
                         <ul class="nav__itemList">
                             <li class="itemList__li"><a href="">item</a></li>
                             <li class="itemList__li"><a href="">item</a></li>
@@ -36,7 +36,7 @@
                         </ul>
                     </nav>
                     <nav>
-                        <h3>Titulo</h3>
+                        <h3 class="footer-map-nav__title">Titulo</h3>
                         <ul class="nav__itemList">
                             <li class="itemList__li"><a href="">item</a></li>
                             <li class="itemList__li"><a href="">item</a></li>
