--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -22,7 +22,16 @@
                 </a>
             </div>
             <div class="header-top-right">
-                <a href="#">SIGN UP</a>
+                <a class="header-top-right__mobileButton" href="#">SIGN UP</a>
+                <nav class="header-nav-menu">
+                    <ul class="header-nav-menu__itemlist">
+                        <li class="itemlist__li"><a href="#">Explorar</a></li>
+                        <li class="itemlist__li"><a href="#">Comprar</a></li>
+                        <li class="itemlist__li"><a href="#">Vender</a></li>
+                        <li class="itemlist__li"><a href="#">Sign Up</a></li>
+                        <li class="itemlist__li"><a href="#"> Login</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
         <div class="header-bottom">
@@ -32,59 +41,6 @@
             </form>
         </div>
     </header>
-    <main></main>
-    <footer>
-        <div class="footer-container">
-            <div class="footer__menu">
-                <a class="footer__logo" href="/"><img class="logo__img" src="/img/logotransparente.png"
-                        alt="Logo">CuBeats</a>
-                <div class="footer-map">
-                    <nav>
-                        <h3>Titulo</h3>
-                        <ul class="nav__itemList">
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                        </ul>
-                    </nav>
-                    <nav>
-                        <h3>Titulo</h3>
-                        <ul class="nav__itemList">
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                        </ul>
-                    </nav>
-                    <nav>
-                        <h3>Titulo</h3>
-                        <ul class="nav__itemList">
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                            <li class="itemList__li"><a href="">item</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div class="footer_redes">
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-square-facebook"></i>
-                <i class="fa-brands fa-square-twitter"></i>
-                <i class="fa-brands fa-tiktok"></i>
-            </div>
-            <div class="footer__derechos">
-                <p>Los beats presentados aquí no son de nuestra autoría. No nos hacemos responsables de su contenido o
-                    derechos de uso.
-                </p>
-            </div>
-        </div>
-    </footer>
     <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
 </body>
 
