--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('general.css');
+@import url('buttons.css');
 @import url('index.css');
 @import url('header.css');
 @import url('footer.css');
