added main, slider, images, html, css, js

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,3 +7,5 @@
 @import url('product.css');
 @import url("register.css");
 @import url('404.css');
+@import url('slider.css');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;400;700&display=swap');
