--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,91 +1,103 @@
+footer {
+  
+  width: 100%;
+  background-color: #f0f0f0;
+  text-align: center;
+  transition: bottom 0.2s ease-in-out;
+  height: 60px;
+}
+
+.nav-down {
+  bottom: -40px;
+}
 .footer-container {
-    background: linear-gradient(135deg, #4366B4, #FC3AD7);
-    color: white;
+  background: linear-gradient(135deg, #4366b4, #fc3ad7);
+  color: white;
 }
 
 .footer__menu {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .footer__logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-    margin-bottom: 20px;
-    gap: 10px;
-    color: white;
-    text-decoration: none;
-    font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  gap: 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
 }
 
 /* FOOTER MAP */
 .footer-map {
-    display: none;
+  display: none;
 }
 
 /* FOOTER REDES */
 .footer_redes {
-    display: flex;
-    justify-content: space-around;
-    width: 70%;
-    margin: 0 auto;
-    padding-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+  width: 70%;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 .footer_redes i {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 /* FOOTER DERECHOS */
 .footer__derechos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__derechos p {
-    width: 90%;
-    text-align: center;
-    padding-bottom: 20px;
+  width: 90%;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 /* MEDIAS QUERIES */
-@media(min-width:481px) {
-    .footer_redes {
-        width: 50%;
-    }
+@media (min-width: 481px) {
+  .footer_redes {
+    width: 50%;
+  }
 }
 
-@media(min-width:769px) {
-    .footer_redes {
-        width: 30%;
-    }
+@media (min-width: 769px) {
+  .footer_redes {
+    width: 30%;
+  }
 
-    .footer-map {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 100%;
-    }
+  .footer-map {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
 
-    .nav__itemList {
-        list-style: none;
-    }
+  .nav__itemList {
+    list-style: none;
+  }
 
-    .itemList__li {
-        text-decoration: none;
-    }
+  .itemList__li {
+    text-decoration: none;
+  }
 
-    .itemList__li a {
-        text-decoration: none;
-        color: white;
-    }
+  .itemList__li a {
+    text-decoration: none;
+    color: white;
+  }
 
-    .footer__menu {
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
-        margin: 0 auto;
-    }
+  .footer__menu {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
 }
