--- a/public/css/shoppingCart.css
+++ b/public/css/shoppingCart.css
@@ -1,142 +1,124 @@
 
-.shoppingCart{
-    font-size: var(--tipografiaCuBeats);
-    width: 100%;
-}
-
-h5{
-    font-size: 12px;
-}
-
-.container {
-    border: 1px solid #883e88;
-    border-radius: 3%;
-    margin: 20px auto;
-    padding: 20px;
-    width: 90%;
-}
-
-.container h4{
-    background-color: #fff;
-    margin-top: -35px;
-    padding: 5px;
-    position: absolute;
-}
-.container__product {
-    font-size: 12px;
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 8px;
-    border-bottom: 1px solid #883e88;
-    margin-bottom: 10px;
-    padding: 10px;
-    width: 100%;
-}
-
-.container__product img {
-  width: 75px;
-  height: 75px;
-}
-
-.container__product__box{
+body {
+    background-color: #2c2c2c;
+    color: #fff;
+  }
+  
+  .shoppingCart {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 32px;
+    font-family: var(--tipografiaCuBeats);
+  }
+  
+  .container__box {
+    width: 100%;
+  }
+  
+  .products-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    height: 100%;
+    gap: 10px;
     width: 100%;
-}
-
-.product-price{
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+  }
+  
+  .product {
+    text-align: center;
+    margin: 16 px;
+    border: 2px solid var(--colorCeleste);
+    border-radius: 10px;
+    padding: 16px;
+    background-color: #161616;
+  }
+  
+  .product img {
     width: 100%;
-}
-
-.container__product i{
-    color: #883e88;
+    height: 150px;
+    border-radius: 8px;
+  }
+  
+  .product h2 {
     font-size: 16px;
-}
-
-.cart {
-   display: flex;
-   flex-direction: column;
-    padding: 10px;
-}
-
-.cart-total {
-    display: flex;
-    justify-content: space-between;
-    font-weight: bold;
-    text-align: right;
-    width: 92%;
-    margin-bottom: 10px;
-}
-
-.cart-total h5{
-    font-size: 12px;
-}
-
-.cart-total p{
-    font-size: 12px;
-}
-
-.cart-impuesto {
-    text-align: right;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    width: 92%;
-    margin-bottom: 10px;
-}
-
-.cart-impuesto h5{
-    font-size: 12px;
-}
-
-.cart-impuesto p{
-    font-size: 12px;
-}
-
-.metodos-pagos{
+    margin: 8px 0;
+  }
+  
+  .product p {
+    font-size: 16px;
+    margin: 8px 0;
+  }
+  
+  .cart-container {
+    background-color: #161616;
+    width: 90%;
+    height: 50%;
+    padding: 16px;
+    border-radius: 10px;
+    margin-top: 16px;
+    border: 2px solid var(--colorCeleste);
+  }
+  
+  .metodos-pagos {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     font-size: 24px;
-    color: #883e88;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-@media (min-width: 481px) {
-
-    .container__product img{
-        margin-right: 30px;
-    }
-
-    .cart {
-        flex-wrap: nowrap;
-        flex-direction: row;
-        width: 100%;
-        gap: 20px;
-     }
-     
-     .cart__box{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-     }
-
-     .metodos-pagos{
-        order: -1;
-    }
-}
-
-@media (min-width: 769px) {
-   
-    .container {
-        border-radius: 0;
-    }
-
+    color: var(--colorCeleste);
+    cursor: pointer;
+    width: 70%;
+    margin: 8px 0;
+  }
   
-}
+  .metodos-pagos:hover {
+    color: var(--colorLila);
+  }
+  
+  @media screen and (min-width: 481px) {
+    .cart-container {
+      margin: 16px;
+      width: 90%;
+      position: relative;
+    }
+  
+    .metodos-pagos {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      font-size: 24px;
+      color: var(--colorCeleste);
+      cursor: pointer;
+      width: 50%;
+      margin: 8px 0;
+    }
+  }
+  
+  @media screen and (min-width: 769px) {
+    .shoppingCart {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-between;
+      padding: 32px;
+    }
+  
+    .products-container {
+      width: 60%;
+    }
+  
+    .cart-container {
+      width: 25%;
+      position: relative;
+    }
+  
+    .metodos-pagos {
+      width: 50%;
+    }
+  
+    .container__box {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
