--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,11 @@
-@import url('general.css');
-@import url('index.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('header.css');
-@import url('footer.css');
+@import url('general.css');
+@import url('buttons.css');
+@import url('index.css');
 @import url('shoppingCart.css');
 @import url('login.css');
 @import url('product.css');
 @import url("register.css");
+@import url('footer.css');
 @import url('404.css');
