--- a/public/css/general.css
+++ b/public/css/general.css
@@ -5,5 +5,12 @@
 }
 
 :root {
+    --tipografiaCuBeats: 'Roboto';
+    --colorCeleste: #0073a6;
+    --colorLila: #eb1cb4;
     --navBackrground: rgba(0, 0, 0, 0.3);
+    /* --navBarColor2: #4366B4;
+    --navBarColor1: #FC3AD7; */
+    --navBarColor2: #4366B4;
+    --navBarColor1: #FC3AD7;
 }
