--- a/views/product.html
+++ b/views/product.html
@@ -83,20 +83,20 @@
                             alt="">
                     </div>
                     <div class="card__info">
-                        <button class="card__favorite"><i class="fa-regular fa-heart"></i></button>
-                        <h4 class="card__title">Titulo</h4>
-                        <h5 class="card__autor">Autor</h5>
-                        <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-                            labore?</p>
+                        <h3 class="card__title">Titulo</h3>
+                        <h4 class="card__autor">Autor</h4>
+                        <p class="card__description">#Rap #Metal #Classic</p>
                     </div>
-                </div> 
+                    <div class="card__menu">
+                        <button onclick="alert('hello')" class="card__favoriteButton"><span>100k</span><i
+                                class="fa-regular fa-heart"></i></button>
+                        <button onclick="alert('hello')" class="card__cartButton"><span>$30.00</span><i
+                                class="fa-solid fa-cart-shopping"></i></button>
+                    </div>
+                </div>
                 <div class="card__reproductor">
                     <audio src="../music/woman.mp3" controls="controls" preload="none">
                     </audio>
-                </div>
-                <div class="product-detail__compra">
-                    <span>Precio: $300</span>
-                    <button><span>Añadir al carro </span><i class="fa-solid fa-cart-shopping"></i></button>
                 </div>
             </div>
         </div>
