--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,3 +9,4 @@
 @import url('404.css');
 @import url('slider.css');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;400;700&display=swap');
+@import url('login.css');
