--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,7 +1,9 @@
-
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Kanit', sans-serif;
+}
+
+:root {
+    --navBackrground: rgba(0, 0, 0, 0.3);
 }
