added register form

--- a/views/index.html
+++ b/views/index.html
@@ -40,8 +40,8 @@
             <li class="itemlist__li"><a href="#">Explorar</a></li>
             <li class="itemlist__li"><a href="#">Comprar</a></li>
             <li class="itemlist__li"><a href="#">Vender</a></li>
-            <li class="itemlist__li"><a href="#">Sign Up</a></li>
-            <li class="itemlist__li"><a href="#"> Login</a></li>
+            <li class="itemlist__li"><a href="/register">Sign Up</a></li>
+            <li class="itemlist__li"><a href="/login"> Login</a></li>
           </ul>
         </nav>
       </div>
@@ -297,7 +297,7 @@
 
       <div class="card">
         <div class="card__image-holder">
-          <img class="card__image" src="./img/fullmix.jpeg" alt="remix" />
+          <img class="card__image" src="./img/gaber.jpg" alt="remix" />
         </div>
         <div class="card-title">
           <a href="#" class="toggle-info btn">
@@ -305,8 +305,8 @@
             <span class="right"></span>
           </a>
           <h2>
-            Full remix
-            <small>energy, cars, bass bosted</small>
+            Giogio Gaber
+            <small>italian, romantic, love songs</small>
           </h2>
         </div>
         <div class="card-flap flap1">
