--- a/views/register.html
+++ b/views/register.html
@@ -6,7 +6,78 @@
     <title>Página de Registro</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    
+<img src="/img/logotransparente.png" alt="Logo de la empresa" class="logo">
+<h1 class="register__title">Registro de Nuevo Usuario</h1>
+<div class="register__form">
+  <div class="banner-container">
+    <div class="banner-wrap">
+      <div class="banner-box">
+        <img src="/img/logotransparente.png" alt="logo">
+        <!-- form -->
+        <form>
+          <div class="form-group">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+          </div>
+          <div class="form-group">
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido" required>
+          </div>
+          <div class="form-group">
+            <label for="usuario">Nombre de Usuario:</label>
+            <input type="text" id="usuario" name="usuario" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <button type="submit">Registrarse</button>
+          </div>
+        </form>
+        <div class="social-buttons">
+          <button>Registrarse con Google</button>
+          <button>Registrarse con Facebook</button>
+          <button>Registrarse con Outlook</button>
+        </div>
+      </div> 
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- <div class="back">
+        <a href="/">< Volver </a>
+    </div>
+    <div class="container">
+        
+        <h2>Registro</h2>
+        <form>
+          <div class="form-group">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+          </div>
+          <div class="form-group">
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido" required>
+          </div>
+          <div class="form-group">
+            <label for="usuario">Nombre de Usuario:</label>
+            <input type="text" id="usuario" name="usuario" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <button type="submit">Registrarse</button>
+          </div>
+        </form>
+        <div class="social-buttons">
+          <button>Registrarse con Google</button>
+          <button>Registrarse con Facebook</button>
+          <button>Registrarse con Outlook</button>
+        </div>
+      </div> -->
 </body>
 </html>
