--- a/views/index.html
+++ b/views/index.html
@@ -67,7 +67,7 @@
     <div class="swiper-button-next"></div>
   </div>
   <!-- Main body -->
-  <main>
+  <main id="home">
     <!-- Tajetas -->
     <div class="cards">
       <div class="card">
