added images and minor css changes to improve readability

--- a/views/index.html
+++ b/views/index.html
@@ -61,6 +61,8 @@
       <div class="swiper-slide"><img src="/img/image1.jpg" /></div>
       <div class="swiper-slide"><img src="/img/image2.jpg" /></div>
       <div class="swiper-slide"><img src="/img/image3.jpg" /></div>
+      <div class="swiper-slide"><img src="/img/image4.jpg" /></div>
+      <div class="swiper-slide"><img src="/img/image5.jpg" /></div>
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
