--- a/public/css/register.css
+++ b/public/css/register.css
@@ -65,7 +65,7 @@
   background-color: #4366B4;
   color: white;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 button[type="reset"]{
   background-color: grey;
@@ -74,10 +74,110 @@ button[type="reset"]{
     padding-top: 20px;
 }
 
+
+
+
+
+
+
+/* BOTON AYUDA */
+
+.help a{
+  text-decoration: none;
+  color:grey
+
+}
+.help a:hover{
+  transform: scale(1.1);
+  transition: all 0.3 ease-in-out;
+}
+.help{
+  text-align: right;
+  margin: 5px auto;
+  width: 40%;
+  background: rgba(255,255,255,0.2);
+  border: 2px solid #fff;
+  border-radius: 20px/50px;
+  background-clip: padding-box;
+}
+
+/* .help-toggle {
+  font-size: 1em;
+  padding: 10px;
+  color: #fff;
+  border: 2px solid #06D85F;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+} */
+.help-toggle:hover {
+  color:#fff;
+  background-color: #4366B4;
+  border-radius: 10px;
+  padding: 3px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+/* MEDIA QUERIES */
+@media screen and (max-width: 700px){
+  .box{
+    width: 70%;
+  }
+  .popup{
+    width: 70%;
+  }
+}
 @media (min-width: 481px) {
   .register__form {
     width: 450px;
     margin-top: 7vh;
   }
 }
-
