--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600,700,900);
-body {
+.body__index {
   background-color: #d9afd9;
   background-image: linear-gradient(0deg, #d9afd9 50%, #acccdf 50%);
   color: #4f585e;
