Intento de solucion de errores

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -6,7 +6,7 @@
 
 
 :root{
---tipografiaCuBeats: 'Roboto';
+--tipografiaCuBeats: 'kanit';
 --colorCeleste: #0073a6;
 --colorLila: #eb1cb4;
 --navBackrground: rgba(0, 0, 0, 0.3);
