--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -57,7 +57,7 @@
         <section class="products-container">
           <div class="product">
             <img src="/img/shoppingCart_1.jpg" alt="Beat 1">
-            <h2>Nombre/Artista</h2>
+            <h2>Electro DJ</h2>
             <h2>Track</h2>
             <p>Precio: $30.00</p>
             <button class="button__cart">Agregar al carrito</button>
@@ -65,7 +65,7 @@
 
           <div class="product">
             <img src="/img/shoppingCart_2.jpg" alt="Beat 2">
-            <h2>Nombre/Artista</h2>
+            <h2>Red hot chilli peppers</h2>
             <h2>Track</h2>
             <p>Precio: $30.00</p>
             <button class="button__cart">Agregar al carrito</button>
@@ -73,7 +73,7 @@
 
           <div class="product">
             <img src="/img/shoppingCart_3.jpg" alt="Beat 3">
-            <h2>Nombre/Artista</h2>
+            <h2>The weeknd</h2>
             <h2>Track</h2>
             <p>Precio: $30.00</p>
             <button class="button__cart">Agregar al carrito</button>
