--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="header-top-right">
-          <a class="header-top-right__mobileButton" href="#">SIGN UP</a>
+          <a class="header-top-right__mobileButton" href="/register">SIGN UP</a>
           <nav class="header-nav-menu">
             <ul class="header-nav-menu__itemlist">
               <li class="itemlist__li"><a href="#">Explorar</a></li>
@@ -48,8 +48,8 @@
               <li class="itemlist__li"><a href="#">Vender</a></li>
             </ul>
             <ul class="header-nav-menu__itemlist">
-              <li class="itemlist__li"><a href="#">Sign up</a></li>
-              <li class="itemlist__li"><a href="#"> Sign in</a></li>
+              <li class="itemlist__li"><a href="/register">Sign up</a></li>
+              <li class="itemlist__li"><a href="/login"> Sign in</a></li>
             </ul>
           </nav>
         </div>
