--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    
+
+<body class="login">
+    <main class="login__main">
+        <div class="login__goHome">
+            <a href="/"><i class="fa-solid fa-left-long"></i></a>
+        </div>
+        <div class="form-container">
+            <form action="/login" class="login__form" method="post">
+                <div class="form__logo">
+                    <img src="/img/logotransparente.png" alt="Logo">
+                </div>
+                <h2>Iniciar Sesión</h2>
+                <div class="form-body">
+                    <input type="text" placeholder="Usuario" name="userName" id="userName" required />
+                    <input type="password" placeholder="Contraseña" name="userPassword" id="userPassword" required />
+                    <label><input type="checkbox" id="recordarme" value="recordarme"><span>RECORDARME</span></label>
+                    <button type="submit">LOG IN</button>
+                    <hr>
+                    <p>¿Aún no tienes cuenta? <a href="#">Registrarse</a></p>
+                </div>
+            </form>
+        </div>
+    </main>
+    <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
